--- a/client/src/html/cast.html
+++ b/client/src/html/cast.html
@@ -28,5 +28,11 @@
             <img alt="Loading..." src="../../assets/images/icon.svg" />
         </div>
         <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+	<script>                                                                                                                                                          
+		window.dataLayer = window.dataLayer || [];                                                                                                              
+                function gtag(){dataLayer.push(arguments);}                                                                                                               
+                gtag('js', new Date());                                                                                                                                   
+                gtag('config', 'UA-51237042-4');
+        </script>        
     </body>
 </html>
